--- a/DossylEditor/Editors/WorldEditor/GameEntityView.xaml
+++ b/DossylEditor/Editors/WorldEditor/GameEntityView.xaml
@@ -9,6 +9,7 @@
 			 d:DataContext="{d:DesignInstance Type=vm:MSGameEntity, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
 	<UserControl.Resources>
+		<local:NullableBoolToBoolConverter x:Key="nullableBoolToBoolConverter"/>
 		<DataTemplate DataType="{x:Type vm:MSTransform}">
 			<local:TransformView/>
 		</DataTemplate>
@@ -57,7 +58,7 @@
                 </Style.Triggers>
             </Style>
         </ScrollViewer.Style>
-        <StackPanel Background="{StaticResource Editor.Window.GreyBrush4}">
+        <StackPanel Background="{StaticResource Editor.Window.GreyBrush4}" VerticalAlignment="Top">
             <Border Height="32" Background="{StaticResource Editor.Window.GreyBrush3}">
                 <ToggleButton
 					x:Name="addComponent"
@@ -67,6 +68,7 @@
 					ClickMode="Press"
 					Focusable="False"
 					PreviewMouseLeftButtonDown="OnAddComponent_Button_PreviewMouse_LBD"
+					IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}"
 				>
                     <ToggleButton.Content>
                         <DockPanel>
@@ -92,19 +94,39 @@
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Name" Grid.Column="0" Margin="5,0,0,0" />
-                <TextBox Text="{Binding Name, UpdateSourceTrigger=Explicit}" Grid.Column="1"
-                    GotKeyboardFocus="OnName_TextBox_GotKeyboardFocus"
-                    LostKeyboardFocus="OnName_TextBox_LostKeyboardFocus"/>
+                <TextBlock
+					Text="Name"
+					Grid.Column="0"
+					Margin="5,0,0,0"
+					Style="{StaticResource LightTextBlockStyle}"
+				/>
+                <TextBox
+					Text="{Binding Name, UpdateSourceTrigger=Explicit}"
+					Grid.Column="1"
+					GotKeyboardFocus="OnName_TextBox_GotKeyboardFocus"
+					LostKeyboardFocus="OnName_TextBox_LostKeyboardFocus"
+					IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}"
+				/>
                 <StackPanel Orientation="Horizontal" Grid.Column="2">
-                    <TextBlock Text="Enabled" Margin="5,0,0,0" />
-                    <CheckBox IsChecked="{Binding IsEnabled, Mode=OneWay}"
-                              Click="OnIsEnabled_CheckBox_Click"
-                              Margin="5,0" VerticalAlignment="Center" />
+                    <TextBlock
+						Text="Enabled"
+						Margin="5,0,0,0"
+						Style="{StaticResource LightTextBlockStyle}"
+					/>
+                    <CheckBox
+						IsChecked="{Binding IsEnabled, Mode=OneWay}"
+						Click="OnIsEnabled_CheckBox_Click"
+						Margin="5,0" VerticalAlignment="Center"
+					/>
                 </StackPanel>
             </Grid>
         
-            <ItemsControl ItemsSource="{Binding Components}">
+            <ItemsControl
+				ItemsSource="{Binding Components}"
+				IsTabStop="False"
+				SnapsToDevicePixels="True"
+				IsEnabled="{Binding IsEnabled, Converter={StaticResource nullableBoolToBoolConverter}}"
+			>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel />
