--- a/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -17,7 +17,7 @@
         <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl"/>
         <KeyBinding Command="{Binding RedoCommand}" Key="Z" Modifiers="Ctrl+Shift"/>
         <KeyBinding Command="{Binding SaveCommand}" Key="S" Modifiers="Ctrl"/>
-		<KeyBinding Command="{Binding BuildCommand}" Key="F7"/>
+		<KeyBinding Command="{Binding BuildCommand}" CommandParameter="{StaticResource True}" Key="F7"/>
     </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
@@ -54,7 +54,7 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
-                <ColumnDefinition />
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
@@ -114,7 +114,7 @@
                 VerticalAlignment="Stretch"
                 Background="Transparent"
             />
-            <Grid Grid.Column="1" Margin="5,0,0,0">
+            <Grid Grid.Column="1" Margin="5,0,0,0" MinWidth="250">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
